feat: open api spec
